--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -19,6 +19,7 @@ source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@tw
 source.twitter-search=docker:springcloudstream/twitter-search-source-kafka:@twitter-search-source-docker.tag@
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-kafka:@websocket-source-docker.tag@
+source.zeromq=docker:springcloudstream/zeromq-source-kafka:@zeromq-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-kafka:@analytics-sink-docker.tag@
 sink.elasticsearch=docker:springcloudstream/elasticsearch-sink-kafka:@elasticsearch-sink-docker.tag@
@@ -43,6 +44,7 @@ sink.throughput=docker:springcloudstream/throughput-sink-kafka:@throughput-sink-
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-kafka:@twitter-message-sink-docker.tag@
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-kafka:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-kafka:@websocket-sink-docker.tag@
+sink.zeromq=docker:springcloudstream/zeromq-sink-kafka:@zeromq-sink-docker.tag@
 processor.aggregator=docker:springcloudstream/aggregator-processor-kafka:@aggregator-processor-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-processor-docker.tag@
