--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -40,6 +40,8 @@ source.twitter-stream=https://@repo-spring-io@/org/springframework/cloud/stream/
 source.twitter-stream.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-kafka/@twitter-stream-source.version@/twitter-stream-source-kafka-@twitter-stream-source.version@-metadata.jar
 source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@.jar
 source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@-metadata.jar
+source.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-kafka/@zeromq-source.version@/zeromq-source-kafka-@zeromq-source.version@.jar
+source.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-kafka/@zeromq-source.version@/zeromq-source-kafka-@zeromq-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@-metadata.jar
 sink.analytics=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-kafka/@analytics-sink.version@/analytics-sink-kafka-@analytics-sink.version@.jar
@@ -88,6 +90,8 @@ sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/ap
 sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@twitter-update-sink.version@/twitter-update-sink-kafka-@twitter-update-sink.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@-metadata.jar
+sink.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-kafka/@zeromq-sink.version@/zeromq-sink-kafka-@zeromq-sink.version@.jar
+sink.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-kafka/@zeromq-sink.version@/zeromq-sink-kafka-@zeromq-sink.version@-metadata.jar
 processor.aggregator=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@aggregator-processor.version@/aggregator-processor-kafka-@aggregator-processor.version@.jar
 processor.aggregator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@aggregator-processor.version@/aggregator-processor-kafka-@aggregator-processor.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@.jar
