--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -40,6 +40,8 @@ source.twitter-stream=maven://org.springframework.cloud.stream.app:twitter-strea
 source.twitter-stream.metadata=maven://org.springframework.cloud.stream.app:twitter-stream-source-kafka:jar:metadata:@twitter-stream-source.version@
 source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-kafka:@websocket-source.version@
 source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-kafka:jar:metadata:@websocket-source.version@
+source.zeromq=maven://org.springframework.cloud.stream.app:zeromq-source-kafka:@zeromq-source.version@
+source.zeromq.metadata=maven://org.springframework.cloud.stream.app:zeromq-source-kafka:jar:metadata:@zeromq-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:jar:metadata:@cassandra-sink.version@
 sink.analytics=maven://org.springframework.cloud.stream.app:analytics-sink-kafka:@analytics-sink.version@
@@ -88,6 +90,8 @@ sink.twitter-update=maven://org.springframework.cloud.stream.app:twitter-update-
 sink.twitter-update.metadata=maven://org.springframework.cloud.stream.app:twitter-update-sink-kafka:jar:metadata:@twitter-update-sink.version@
 sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:@websocket-sink.version@
 sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:jar:metadata:@websocket-sink.version@
+sink.zeromq=maven://org.springframework.cloud.stream.app:zeromq-sink-kafka:@zeromq-sink.version@
+sink.zeromq.metadata=maven://org.springframework.cloud.stream.app:zeromq-sink-kafka:jar:metadata:@zeromq-sink.version@
 processor.aggregator=maven://org.springframework.cloud.stream.app:aggregator-processor-kafka:@aggregator-processor.version@
 processor.aggregator.metadata=maven://org.springframework.cloud.stream.app:aggregator-processor-kafka:jar:metadata:@aggregator-processor.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
