--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -19,6 +19,7 @@ source.twitter-message=docker:springcloudstream/twitter-message-source-rabbit:@t
 source.twitter-search=docker:springcloudstream/twitter-search-source-rabbit:@twitter-search-source-docker.tag@
 source.twitter-stream=docker:springcloudstream/twitter-stream-source-rabbit:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
+source.zeromq=docker:springcloudstream/zeromq-source-rabbit:@zeromq-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.analytics=docker:springcloudstream/analytics-sink-rabbit:@analytics-sink-docker.tag@
 sink.elasticsearch=docker:springcloudstream/elasticsearch-sink-rabbit:@elasticsearch-sink-docker.tag@
@@ -43,6 +44,7 @@ sink.throughput=docker:springcloudstream/throughput-sink-rabbit:@throughput-sink
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-rabbit:@twitter-message-sink-docker.tag@
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-rabbit:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-rabbit:@websocket-sink-docker.tag@
+sink.zeromq=docker:springcloudstream/zeromq-sink-rabbit:@zeromq-sink-docker.tag@
 processor.aggregator=docker:springcloudstream/aggregator-processor-rabbit:@aggregator-processor-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-rabbit:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-processor-docker.tag@
