--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -40,6 +40,8 @@ source.twitter-stream=https://@repo-spring-io@/org/springframework/cloud/stream/
 source.twitter-stream.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-rabbit/@twitter-stream-source.version@/twitter-stream-source-rabbit-@twitter-stream-source.version@-metadata.jar
 source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-rabbit/@websocket-source.version@/websocket-source-rabbit-@websocket-source.version@.jar
 source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-rabbit/@websocket-source.version@/websocket-source-rabbit-@websocket-source.version@-metadata.jar
+source.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-rabbit/@zeromq-source.version@/zeromq-source-rabbit-@zeromq-source.version@.jar
+source.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-source-rabbit/@zeromq-source.version@/zeromq-source-rabbit-@zeromq-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@-metadata.jar
 sink.analytics=https://@repo-spring-io@/org/springframework/cloud/stream/app/analytics-sink-rabbit/@analytics-sink.version@/analytics-sink-rabbit-@analytics-sink.version@.jar
@@ -88,6 +90,8 @@ sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/ap
 sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-rabbit/@twitter-update-sink.version@/twitter-update-sink-rabbit-@twitter-update-sink.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@-metadata.jar
+sink.zeromq=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-rabbit/@zeromq-sink.version@/zeromq-sink-rabbit-@zeromq-sink.version@.jar
+sink.zeromq.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/zeromq-sink-rabbit/@zeromq-sink.version@/zeromq-sink-rabbit-@zeromq-sink.version@-metadata.jar
 processor.aggregator=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-rabbit/@aggregator-processor.version@/aggregator-processor-rabbit-@aggregator-processor.version@.jar
 processor.aggregator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-rabbit/@aggregator-processor.version@/aggregator-processor-rabbit-@aggregator-processor.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@.jar
