--- a/functions/common/function-test-support/pom.xml
+++ b/functions/common/function-test-support/pom.xml
@@ -14,7 +14,7 @@
     <description>file consumer</description>
 
     <properties>
-        <sshd-core.version>1.6.0</sshd-core.version>
+        <sshd-sftp.version>2.7.0</sshd-sftp.version>
         <apache-ftpserver.version>1.1.1</apache-ftpserver.version>
         <awaitility.version>4.0.3</awaitility.version>
     </properties>
@@ -47,8 +47,8 @@
 
         <dependency>
             <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
-            <version>${sshd-core.version}</version>
+            <artifactId>sshd-sftp</artifactId>
+            <version>${sshd-sftp.version}</version>
         </dependency>
 
         <dependency>
