Fix Redis modules for proper dependencies
According `testcontainers-spring-boot` project we have to use now a `spring-cloud-starter-bootstrap`
dependency to make it compatible with Spring Boot `2.4.x` or higher:
https://github.com/Playtika/testcontainers-spring-boot#how-to-use

--- a/applications/sink/redis-sink/pom.xml
+++ b/applications/sink/redis-sink/pom.xml
@@ -16,8 +16,8 @@
     </parent>
 
     <properties>
-        <spring-cloud-starters.version>2.2.0.RELEASE</spring-cloud-starters.version>
-        <embedded-redis.version>1.85</embedded-redis.version>
+        <spring-cloud-starters.version>3.0.3</spring-cloud-starters.version>
+        <embedded-redis.version>2.0.9</embedded-redis.version>
     </properties>
 
     <dependencies>
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>${spring-cloud-starters.version}</version>
             <scope>test</scope>
         </dependency>
