--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -338,6 +338,10 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<excludedGroups>!integration</excludedGroups>
+							<groups>integration</groups>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
