Add app groupId mojo tag to configure the app's alternate group
  If app#groupId is provided, the value is used as the application maven groupId as well
  as the base package for the generated packageName in the generator.

  The app#groupId defaults "org.springframework.cloud.stream.app".

  Resolves #4

--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -231,6 +231,7 @@
 						<type>source</type>
 						<version>${project.version}</version>
 						<configClass>io.pivotal.java.function.http.supplier.HttpSupplierConfiguration.class</configClass>
+						<groupId>org.springframework.cloud.stream.app.test</groupId>
 
 						<properties>
 							<spring.main.web-application-type>reactive</spring.main.web-application-type>
