Rework ZeroMQ PUB/SUB tests for Awaitility
* Since PUB socket may send messages even if there are no any subscribers
and that message is going to be lost, therefore we must re-send it in the
test until it is received by the other side (SUB)
* Use `await().untilAsserted()` to iterate the logic at most for 10 seconds
* Clear some duplicated deps in the POMs of the affected modules

--- a/applications/sink/zeromq-sink/pom.xml
+++ b/applications/sink/zeromq-sink/pom.xml
@@ -25,16 +25,15 @@
 
         <!-- Test dependencies -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
