--- a/applications/source/mongodb-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/mongodb-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,1 +1,3 @@
-configuration-properties.classes=org.springframework.cloud.fn.supplier.mongo.MongodbSupplierProperties
+configuration-properties.classes=org.springframework.cloud.fn.supplier.mongo.MongodbSupplierProperties,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties
+
