--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -21,8 +21,8 @@
         <java-functions.version>1.1.0-SNAPSHOT</java-functions.version>
         <apps.base-image>springcloud/baseimage:1.0.0</apps.base-image>
         <mockserver.version>5.10</mockserver.version>
-        <spring-cloud-stream-dependencies.version>3.1.4-SNAPSHOT</spring-cloud-stream-dependencies.version>
-        <spring-cloud-stream.version>3.1.4-SNAPSHOT</spring-cloud-stream.version>
+        <spring-cloud-stream-dependencies.version>3.1.4</spring-cloud-stream-dependencies.version>
+        <spring-cloud-stream.version>3.1.4</spring-cloud-stream.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.4</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.4</spring-cloud-dataflow-apps-docs-plugin.version>
         <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.4</spring-cloud-dataflow-apps-metadata-plugin.version>
@@ -30,7 +30,7 @@
         <prometheus-rsocket.version>1.3.0</prometheus-rsocket.version>
         <!-- Boot 2.4.x needs wavefront-spring-boot version 2.1.0-RC1+ -->
         <wavefront-spring-boot.version>2.2.0</wavefront-spring-boot.version>
-        <spring-cloud.version>2020.0.4-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>2020.0.4</spring-cloud.version>
     </properties>
 
     <modules>
