--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -15,7 +15,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<spring-cloud-function.version>3.1.4-SNAPSHOT</spring-cloud-function.version>
+		<spring-cloud-function.version>3.1.4</spring-cloud-function.version>
 		<spring-cloud-fn.version>${project.version}</spring-cloud-fn.version>
 	</properties>
 
