--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -40,10 +40,10 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.5.4-SNAPSHOT</spring-boot.version>
+		<spring-boot.version>2.5.5</spring-boot.version>
 		<spring-kafka.version>2.7.1</spring-kafka.version>
 		<spring-rabbit.version>2.3.7</spring-rabbit.version>
-		<spring-cloud-function.version>3.1.4-SNAPSHOT</spring-cloud-function.version>
+		<spring-cloud-function.version>3.1.4</spring-cloud-function.version>
 		<spring-data-geode-test.version>0.0.21.RELEASE</spring-data-geode-test.version>
 		<test-containers.version>1.15.2</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
