stream-applications-release-train: 2021.0.0-RC1

--- a/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
+++ b/stream-applications-release-train/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-harbor.properties
@@ -19,6 +19,7 @@ source.twitter-message=docker:projects.registry.vmware.com/springcloudstream/twi
 source.twitter-search=docker:projects.registry.vmware.com/springcloudstream/twitter-search-source-rabbit:@apps.harbor.version@
 source.twitter-stream=docker:projects.registry.vmware.com/springcloudstream/twitter-stream-source-rabbit:@apps.harbor.version@
 source.websocket=docker:projects.registry.vmware.com/springcloudstream/websocket-source-rabbit:@apps.harbor.version@
+source.zeromq=docker:projects.registry.vmware.com/springcloudstream/zeromq-source-rabbit:@apps.harbor.version@
 sink.cassandra=docker:projects.registry.vmware.com/springcloudstream/cassandra-sink-rabbit:@apps.harbor.version@
 sink.analytics=docker:projects.registry.vmware.com/springcloudstream/analytics-sink-rabbit:@apps.harbor.version@
 sink.elasticsearch=docker:projects.registry.vmware.com/springcloudstream/elasticsearch-sink-rabbit:@apps.harbor.version@
@@ -42,6 +43,7 @@ sink.throughput=docker:projects.registry.vmware.com/springcloudstream/throughput
 sink.twitter-message=docker:projects.registry.vmware.com/springcloudstream/twitter-message-sink-rabbit:@apps.harbor.version@
 sink.twitter-update=docker:projects.registry.vmware.com/springcloudstream/twitter-update-sink-rabbit:@apps.harbor.version@
 sink.websocket=docker:projects.registry.vmware.com/springcloudstream/websocket-sink-rabbit:@apps.harbor.version@
+sink.zeromq=docker:projects.registry.vmware.com/springcloudstream/zeromq-sink-rabbit:@apps.harbor.version@
 processor.aggregator=docker:projects.registry.vmware.com/springcloudstream/aggregator-processor-rabbit:@apps.harbor.version@
 processor.bridge=docker:projects.registry.vmware.com/springcloudstream/bridge-processor-rabbit:@apps.harbor.version@
 processor.filter=docker:projects.registry.vmware.com/springcloudstream/filter-processor-rabbit:@apps.harbor.version@
