Enable actuator discovery

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
@@ -3,7 +3,7 @@ info.app.name=@project.artifactId@
 info.app.description=@project.description@
 info.app.version=@project.version@
 management.endpoints.web.exposure.include=health,info,bindings
-
+management.endpoints.web.discovery.enabled=true
 spring.cloud.function.definition={{app.functionDefinition}}
 
 {{#app.consumer}}
