--- a/applications/processor/filter-processor/pom.xml
+++ b/applications/processor/filter-processor/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>filter-processor</artifactId>
     <name>filter-processor</name>
     <description>filter processor apps</description>
-    <version>3.1.0-SNAPSHOT</version>
+    <version>3.1.0</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
 
