--- a/applications/source/zeromq-source/pom.xml
+++ b/applications/source/zeromq-source/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
 
