--- a/applications/sink/zeromq-sink/pom.xml
+++ b/applications/sink/zeromq-sink/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zeromq-sink</artifactId>
+    <version>3.1.1-SNAPSHOT</version>
     <name>zeromq-sink</name>
     <description>0MQ sink apps</description>
     <packaging>jar</packaging>
@@ -11,7 +12,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
