Next version updates
stream-applications-build: 1.1.2-SNAPSHOT
functions: 1.1.2-SNAPSHOT
stream-applicatons-core: 3.1.2-SNAPSHOT
applications: 3.1.2-SNAPSHOT
release-train: 2021.0.2-SNAPSHOT

--- a/applications/processor/bridge-processor/pom.xml
+++ b/applications/processor/bridge-processor/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>bridge-processor</artifactId>
     <name>bridge-processor</name>
     <description>bridge processor apps</description>
-    <version>3.1.1</version>
+    <version>3.1.2-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.1.1</version>
+        <version>3.1.2-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
