GH-183: Expose MQTT SSL properties
Fixes https://github.com/spring-cloud/stream-applications/issues/183

* Add `MqttProperties.sslProperties` common MQTT configuration property as a `Map` structure
* Delegate a content fo the `MqttProperties.sslProperties` into `mqttConnectOptions.setSSLProperties()`
in the common `MqttConfiguration`
* Verify that SSL properties are applied in both `MqttSupplierTests` & `MqttConsumerTests`
* Document a new `MqttProperties.sslProperties` configuration property for both consumer and supplier
* Use `eclipse-mosquitto` Docker image for MQTT tests instead of RabbitMQ plugin: the Mosquitto starts much faster

--- a/functions/common/mqtt-common/pom.xml
+++ b/functions/common/mqtt-common/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>mqtt-common</artifactId>
     <name>mqtt-common</name>
-    <description>file consumer</description>
+    <description>MQTT Common</description>
 
     <dependencies>
 
