--- a/functions/common/cdc-debezium-boot-starter/pom.xml
+++ b/functions/common/cdc-debezium-boot-starter/pom.xml
@@ -15,7 +15,7 @@
 	<description>Change Data Capture (CDC) Debezium Boot Starter</description>
 
 	<properties>
-		<version.debezium>1.3.0.Final</version.debezium>
+		<version.debezium>1.7.1.Final</version.debezium>
 	</properties>
 
 	<dependencies>
@@ -38,24 +38,24 @@
 			<artifactId>debezium-connector-mysql</artifactId>
 			<exclusions>
 				<exclusion>
-					<artifactId>mysql-connector-java</artifactId>
-					<groupId>mysql</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>
 			<version>${version.debezium}</version>
 		</dependency>
 
-		<!--		<dependency>-->
-		<!--			<groupId>io.debezium</groupId>-->
-		<!--			<artifactId>debezium-connector-mongodb</artifactId>-->
-		<!--			<exclusions>-->
-		<!--				<exclusion>-->
-		<!--					<artifactId>slf4j-log4j12</artifactId>-->
-		<!--					<groupId>org.slf4j</groupId>-->
-		<!--				</exclusion>-->
-		<!--			</exclusions>-->
-		<!--			<version>${version.debezium}</version>-->
-		<!--		</dependency>-->
+				<dependency>
+					<groupId>io.debezium</groupId>
+					<artifactId>debezium-connector-mongodb</artifactId>
+					<exclusions>
+						<exclusion>
+							<artifactId>slf4j-log4j12</artifactId>
+							<groupId>org.slf4j</groupId>
+						</exclusion>
+					</exclusions>
+					<version>${version.debezium}</version>
+				</dependency>
 
 		<dependency>
 			<groupId>io.debezium</groupId>
@@ -89,23 +89,6 @@
 				</exclusion>
 			</exclusions>
 			<version>${version.debezium}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.13</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>mysql</artifactId>
 		</dependency>
 
 		<dependency>
