--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
@@ -4,6 +4,7 @@ info.app.description=@project.description@
 info.app.version=@project.version@
 management.endpoints.web.exposure.include=health,info,bindings
 management.endpoints.web.discovery.enabled=true
+management.info.env.enabled=true
 spring.cloud.function.definition={{app.functionDefinition}}
 
 {{#app.consumer}}
