--- a/applications/stream-applications-core/stream-applications-security-common/pom.xml
+++ b/applications/stream-applications-core/stream-applications-security-common/pom.xml
@@ -48,6 +48,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream</artifactId>
+            <type>test-jar</type>
+            <classifier>test-binder</classifier>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
