--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -44,8 +44,9 @@
 		<spring-kafka.version>2.8.2</spring-kafka.version>
 		<spring-rabbit.version>2.4.2</spring-rabbit.version>
 		<spring-cloud-function.version>3.2.1</spring-cloud-function.version>
+		<spring-cloud-starters.version>3.1.0</spring-cloud-starters.version>
 		<spring-data-geode-test.version>0.0.21.RELEASE</spring-data-geode-test.version>
-		<test-containers.version>1.15.2</test-containers.version>
+		<test-containers.version>1.16.3</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 	</properties>
@@ -322,8 +323,8 @@
 			<build>
 				<plugins>
 					<plugin>
-						 <groupId>org.apache.maven.plugins</groupId>
-						 <artifactId>maven-surefire-plugin</artifactId>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
 							<excludedGroups>integration</excludedGroups>
 						</configuration>
