--- a/functions/function/aggregator-function/pom.xml
+++ b/functions/function/aggregator-function/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.springframework.geode</groupId>
             <artifactId>spring-geode-starter</artifactId>
-            <version>1.3.2.RELEASE</version>
+            <version>1.6.3</version>
         </dependency>
 
         <!--JDBC-->
