Fix tests broken from previous commit (#13)

--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -142,10 +142,7 @@
 														<image>springcloud/baseimage:1.0.0</image>
 													</from>
 													<to>
-														<image>springcloudstream:${project.artifactId}</image>
-														<tags>
-															<tag>latest</tag>
-														</tags>
+														<image>springcloudstream:${project.artifactId}:3.0.0.BUILD-SNAPSHOT</image>
 													</to>
 													<container>
 														<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
